@@ -78,3 +78,6 @@ s(t)
 ..
 eval("f",[1,2,3])
 ................................................................
+
+num=[7,-2,3,5];den=[3,8,0,-4];
+{a,b}=polydiv(num,den)
