@@ -1,6 +1,12 @@
 TODO:
+review the parser
+  pb: function parameter
+    fail when a parameter is defined by calling a function without parentheses
+  ex f(pi)   --> fail
+     f(pi()) --> ok
+call builtin function with _zzz()
 review the parsing of matrix indexes
-review the parsing of multiple result return
+review the parsing of multiple result return (?)
 review header.h
 review plotting functions, log graph, subplots,
   get export to png/eps/svg?
@@ -11,7 +17,7 @@ review mprintf
 optionnal external help file
 sound io and play
 signal and control mini-toolboxes
-bare-meta port to a microcontroller
+bare-metal port to a microcontroller
 allow choice between simple and double precision numbers at compile
   time? (for microcontroller support)
 make user defined functions first class objects?
@@ -25,8 +31,9 @@ get support for notebooks back?
 Tk/gtk/Qt GUIs back?
 
 1.00
+allow escaped characters in strings
 review of the parsing of numbers and formatted outputs
-option for 24 byte header at compile time
+option for 16 or 24 byte header at compile time
 fix of condition eval in boolean test
 review of the encoding of buitin commands in user defined functions
 review of the encoding of formal parameters and add a switch for
